[package]
name = "hyperdht"
version = "0.1.0"
edition = "2024"

[dependencies]
dht-rpc = { path = "../rpc" }
rand = "0.7.3"
arrayvec = "0.5.1"
uint = "0.8.3"
futures = "0.3.5"
wasm-timer = "0.2.4"
fnv = "1.0.7"
smallvec = "1.4.1"
thiserror = "1.0.68"
libsodium-sys-stable = "1.21.2"
derive_builder = "0.20.2"
tracing = "0.1.41"
const-hex = "1.14.0"
async-compat = "0.2.1"

[dependencies.tokio]
version = "1.41.0"
features = ["rt", "net", "sync", "time"]

[dependencies.compact-encoding]
version = "2.2.0"

[dependencies.udx]
version = "0.2.0"

[dev-dependencies]
async-process = "2.2.1"
serde = "1.0.217"
serde_json = "1.0.135"
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies.test_utils]
path = "../test_utils"

[dev-dependencies.rusty_nodejs_repl]
features = [ "serde" , "integration_utils"]
version = "0.2.2"

[dependencies.hypercore_handshake]
version = "0.4.0"
#path = "../../handshake"

[dependencies.uint24le_framing]
version = "0.2.0"
